Fixed email section on mobile

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -18,7 +18,7 @@
 		align-items: flex-end;
 		flex-wrap: wrap;
 		justify-content: space-between;
-		padding: 0 16px;
+		padding: 32px 16px 0;
 
 		.emailSection__info {
 			max-width: 460px;
